--- a/doc/converse/manual.tex
+++ b/doc/converse/manual.tex
@@ -1,4 +1,4 @@
-\documentstyle[11pt,epsf]{article}
+\documentstyle[11pt,epsf]{report}
 \setcounter{topnumber}{2}
 \def\topfraction{1}
 \setcounter{bottomnumber}{1}
