--- a/doc/converse/scheduler.tex
+++ b/doc/converse/scheduler.tex
@@ -1,5 +1,4 @@
-
-\section{Initialization and Completion}
+\chapter{Initialization and Completion}
 
 
 \function {void ConverseInit(void)}
@@ -15,7 +14,7 @@ after this call.
 
 
 
-\section{Scheduler Calls}
+\chapter{Scheduler Calls}
 
 %These are the calls/macros provided by the Converse scheduler.
 %All declarations are in converse.h.
