--- a/doc/converse/threads.tex
+++ b/doc/converse/threads.tex
@@ -1,239 +1,187 @@
-\chapter{Message Manager Calls}
+\section{Thread Calls}
 
-To use the following calls, include the file ``SM.h''.
+To use the threads package, you must include {\tt converse.h} and link
+with the converse library.  Note: threads are not implemented on all
+hardware platforms.  Although a program that calls thread-functions
+will {em link} on all platforms, it won't necessarily {\tt execute}.
+Attempting to initialize the threads package on a machine that does
+not support threads will result in an error message.
 
-\function{MSG\_MNGR *CmmNew(void)}
-\desc{This call returns a new initialized message manager that can store and 
-retrieve messages.}
+This threads package, like most thread packages, provides a function
+for creating threads, one for destroying threads, one for explicitly
+transferring control to another thread, and one for retrieving the
+currently-executing thread.  Note that these functions do not include
+any intelligent strategy for choosing which thread executes when: in
+other words, they provide no scheduler.
 
-\function{CmmPut(MSG\_MNGR *mm, void *msg, int tag, int size)}
-\hspace{2in} (AND)\\
-\function{CmmPut2(MSG\_MNGR *mm, void *msg, int tag1, int tag2, int size)}
-\desc{This call puts the message \param{msg} into the message manager 
-\param{mm}'s data structure along with its \param{tag} and \param{size} 
-fields.}
+However, though the threads package does not provide an actual
+scheduler, it does assume that the user is going to need one.
+Therefore, it defines an interface to which all schedulers can comply.
+This makes it possible for users to write blocking code (eg, locks,
+barriers, etc) without knowing exactly how the scheduler will work.
+The scheduler interface consists of an awaken function and a suspend
+function.  The awaken function is called by the thread user to notify
+the scheduler that a particular thread wants the CPU.  The scheduler
+is expected to respond to this by inserting the thread into a
+ready-queue or something similar.  The suspend function tells the
+scheduler that the current thread no longer wants the CPU, whereupon
+the scheduler must choose another thread to execute instead.  No
+stipulation is made about how the scheduler chooses the thread to
+execute next, except that the thread must want the CPU. (Eg, somebody
+must have declared that the thread wants the CPU using the
+awaken-function.)
 
-\note{In the following calls, \param{tag} parameters may be wildcarded by 
-placing a value of {\bf CmmWildCard} in them. The actual values of the tag(s) of 
-the message, if any, are returned in the \param{rettag} parameters if they are
-non-NULL.}
+The threads-package makes it possible to associate private data
+with a thread.  to this end, we provide functions for storing and
+retrieving arbitrary user data in the thread-object.
 
-\function{int CmmProbe(MSG\_MNGR *mm, int tag, int *rettag)}
-\hspace{2in} (AND)\\
-\function{int CmmProbe(MSG\_MNGR *mm, int tag1, int tag2, int *rettag1, int *rettag2)}
-\desc{This call returns the size of the message with tag \param{tag} that is 
-stored in the message manager \param{mm}, and returns -1 if such a message 
-is not found.}
+Finally, as a convenience to converse users, we provide a function
+that causes a thread to be automatically scheduled by the converse
+scheduler {\tt CsdScheduler}.
 
-\function{int CmmGet(MSG\_MNGR *mm, void *addr, int tag, int size, int *rettag)}
-\hspace{2in} (AND)\\
-\function{int CmmGet2(MSG\_MNGR *mm, void *addr, int tag1, int tag2, int size, int *rettag1, int *rettag2)}
-\desc{This call copies at most \param{size} bytes of a message stored in the 
-message manager \param{mm} with the tag(s) into the address pointed to by 
-\param{addr}. The return value is the length of the message.}
+\function{int CthImplemented()}
+\desc{Returns true if the current hardware platform supports the threads
+functions described below.}
 
-\function{int CmmGetPtr(MSG\_MNGR *mm, void *addr, int tag, int *rettag)}
-\hspace{2in} (AND)\\
-\function{int CmmGetPtr2(MSG\_MNGR *mm, void **addr, int tag1, int tag2, int *rettag1, int *rettag2)}
-\desc{This call allocates memory for the message in the message manager 
-\param{mm} with the tag(s) and returns this address in \param{*addr}. 
-The return value is the length of the message.}
+\function{typedef struct CthThreadStruct *CthThread;}
+\desc{This is an opaque type defined in {\tt converse.h}.  It represents
+a first-class thread object.  No information is publicized about the
+contents of a CthThreadStruct, {\it except} that it {\it does} include a
+converse header, so you may call {\tt CmiSetHandler} on a {\tt CthThread}
+and subsequently enqueue the thread in the {\tt CsdScheduler} queue.}
 
-\chapter{Thread Manipulation}
+\function{typedef void (CthVoidFn)();}
+\desc{This is a type defined in {\tt threads.h}.  It represents
+a function that returns nothing.}
 
-To use the following calls, include the file ``thr\_defns.h''.
+\function{typedef CthThread (CthThFn)();}
+\desc{This is a type defined in {\tt threads.h}.  It represents
+a function that returns a CthThread.}
 
-\section{Thread Object Calls}
+\function{void CthInit()}
+\desc{Caution: you must call either {\tt ConverseInit} {\tt or} {\tt
+CthInit} before calling any of the thread functions described below,
+but you must {\tt not} call both.}
 
-\function{int CthInit(void)}
-\desc{This call initializes some variables that are used by the thread calls 
-library, and should be called before any other thread calls are made.}
+\function{CthThread CthSelf()}
+\desc{Returns the currently-executing thread.  Note: even the initial
+flow of control that inherently existed when the program began
+executing {\tt main} counts as a thread.  You may retrieve that thread
+object using {\tt CthSelf} and use it like any other.}
 
-\function{THREAD *CthCreate(THRFN fn, void *arg)}
-\hspace{2in}
-  (AND)\\
-\function{THREAD *CthCreateOfSize(THRFN fn, void *arg, int stacksize)}
-\desc{These are calls to create a thread. This function takes a
-function pointer \param{fn} and its void pointer argument \param{arg}.
-The second call can be used if a stack of size other than the standard
-STACKSIZE is to be allocated for the thread.}
+\function{void CthResume(CthThread t)}
+\desc{Immediately transfers control to thread {\tt t}.  Note:
+normally, the user of a thread package wouldn't explicitly choose
+which thread to transfer to.  Instead, the user would rely upon a
+scheduler to choose the next thread.  Therefore, this routine is
+primarily intended for people who are implementing schedulers, not for
+end-users.  End-users should probably call {\tt CthSuspend} or {\tt
+CthAwaken} (see below).  Likewise, programmers implementing locks,
+barriers, and other synchronization devices should also probably
+rely on {\tt CthSuspend} and {\tt CthAwaken}.}
 
-\function{int CthResume(THREAD *thr)}
-\desc{This call causes an immediate context switch to the specified
-thread {\tt thr}. The thread {\tt thr} continues to run until it, in
-turn, gives up control using CthResume or some variant of CthResume.}
+\function{CthThread CthCreate(CthVoidFn fn, void *arg, int size)}
+\desc{Creates a new thread object.  The thread is not given control
+yet.  The thread is not passed to any scheduler.  When (and if) the
+thread eventually receives control, it will begin executing the
+specified function {\tt fn} with the specified argument.  The {\tt size}
+parameter specifies the stack size in bytes, 0 means use the default
+size.
 
-\function{int CthSuspend(void)}
-\desc{This function is a variant of CthResume --- it immediately causes
-a context-switch to some other thread.  This function differs from
-CthResume in only one way: it makes its own decision about which thread
-to transfer control to.  It always chooses a thread from a "ready pool"
-which is maintained by the user.
+Caution: almost all threads are created with CthCreate, but not all.
+In particular, the one initial thread of control that came into
+existence when your program was first {\tt exec}'d was not created
+with {\tt CthCreate}, but it can be retrieved (say, by calling {\tt
+CthSelf} in {\tt main}), and it can be used like any other {\tt
+CthThread}.}
 
-By default, CthSuspend always selects the thread which has been in
-its ready-pool the longest.  This selection strategy may be altered
-by the user on a per-thread basis by calling CthSetStrategy below.}
+\function{void CthFree(CthThread t)}
+\desc{Frees thread {\tt t}.  You may even free the currently-executing
+thread, although the free will actually be postponed until the thread
+suspends.  This is how a thread terminates itself: it calls {\tt
+CthFree(CthSelf())}, then gives up control to another thread.}
 
-\function{int CthAwaken(THREAD thr)}
-\desc{The thread is added to
-CthSuspend's ready-pool.  This essentially constitutes permission for
-CthSuspend to transfer control to thread {\tt thr}.  CthAwaken must only
-be called on a thread when it can be shown that it is indeed acceptable
-for the thread to continue execution.}
+\function{void CthSuspend()}
+\desc{This is part of the scheduler-interface.  When a scheduler is
+being used, threads should call {\tt CthSuspend} when they wish to
+give up control of the CPU.  {\tt CthSuspend} will then automatically
+transfer control to some other thread that wants the CPU.  {\tt
+CthSuspend} will select the thread to transfer control to by calling a
+user-supplied "choose-next" function (see {\tt CthSetStrategy}
+below).}
 
-\function{THREAD *CthSetStrategy(THREAD thr, THRFN suspfn, void *susparg, THRFN awakefn, void *awakearg)}
-\desc{CthAwaken and CthSuspend work together.  By default, CthAwaken
-``adds a thread to the ready pool'' by pushing it on a FIFO queue.  By
-default, CthSuspend ``finds a thread in the ready-pool'' by popping
-this same FIFO queue.  Together, this behavior guarantees that
-CthSuspend always can find a thread which is in the ready-pool.
+\function{void CthAwaken(CthThread t)}
+\desc{This is part of the scheduler-interface.  When a scheduler is
+being used, this function should be used to notify the scheduler that
+thread {\tt t} wants the CPU.  This will enable the scheduler to
+select thread {\tt t} for execution at some point in the future.
+In actuality, {\tt CthAwaken} simply calls the user-supplied "awaken"
+function (see {\tt CthSetStrategy} below).}
 
-Using CthSetStrategy, you may alter the way CthAwaken and CthSuspend
-work together.  The purpose of such modification is to give you
-control over the order in which CthSuspend selects threads for
-execution.  Note that you should not otherwise change the semantics
-of CthAwaken and CthSuspend: only the order of selection should be
-altered.
+\function{void CthSetStrategy(CthThread t, CthVoidFn awakenfn, CthThFn choosefn)}
+\desc{This is part of the scheduler-interface.  It should be used by
+the creator of thread {\tt t} to specify the scheduling functions to
+be used for thread {\tt t}.  The scheduling functions must have the
+following prototypes:
+\begin{itemize}
 
-Each time a CthAwaken is performed on a thread t, thread t's
-{\tt awakefn} is called.  The {\tt awakefn} must perform the task of
-CthAwaken: it must store the thread t in a location such that it can
-later be found by CthSuspend.
+\item{{\tt void awakenfn(CthThread t);}}
 
-Each time a thread t calls CthSuspend, thread t's {\tt suspfn} is
-called.  The {\tt suspfn} must look for a ready thread to transfer
-control to.  It does this by looking in a location where CthAwaken
-stores threads.  Once found, the {\tt suspfn} must resume the thread
-using CthResume.
+\item{{\tt CthThread choosefn();}}
 
-Note that CthSetStrategy overrides the behavior of CthAwaken and
-CthSuspend only on a per-thread basis.  In a modular program, it is
-therefore possible for each module to control the order in which
-its own threads are scheduled.}
+\end{itemize}
+These functions must be provided on a per-thread basis.  (Eg, if you
+{\tt CthAwaken} a thread {\tt X}, then {\tt X}'s {\tt awakenfn} will
+be called.  If a thread {\tt Y} calls {\tt CthSuspend}, then thread
+{\tt Y}'s {\tt choosefn} will be called to pick the next thread.)  Of
+course, you may use the same functions for all threads (the common
+case), but the specification on a per-thread basis gives you maximum
+flexibility in controlling scheduling.}
 
-\mycomment{
-% Sanjay wanted this out.
-\function{QUEUE *CthGetFifo()}
-\desc{Returns the FIFO queue on which CthAwaken stores threads by
-default.  Naturally, this is the same queue that CthSuspend looks on
-for ready threads by default.  The queue can be managed using the
-queue routines below.}
-}
+\function{void CthYield()}
+\desc{This function is part of the scheduler-interface.  It simply
+executes {\tt \{ CthAwaken(CthSelf()); CthSuspend(); \} }.  This combination
+gives up control temporarily, but ensures that control will eventually
+return.}
 
-\function{int CthExit(void)}
-\desc{This call is used by a thread that has finished execution.  The
-thread ceases to exist, and transfer is controlled to some other
-thread using CthSuspend.  If the thread that exited had a special
-scheduling strategy, that strategy is used to choose the next thread.}
+\function{void CthSetVar(CthThread t, void **var, void *val)}
+\desc{Specifies that the global variable pointed to by {\tt
+var} should be set to value {\tt val} whenever thread {\tt t} is
+executing.  {\tt var} should be of type {\tt void *}, or at least
+should be coercible to a {\tt void *}.  This can be used to associate
+thread-private data with thread {\tt t}.
 
-\function{int CthYield(void)}
-\desc{This call simply calls CthAwaken on the current thread (thereby
-adding the current thread to CthSuspend's ready-pool), after which it
-calls CthSuspend.  This may cause a transfer of control to another
-thread.  Control will probably come back to the thread that yielded,
-given that it is now in CthSuspend's ready-pool.}
+it is intended that this function be used as follows:}
 
-\function{THREAD *CthSelf(void)}
-\desc{This call returns a pointer to the currently executing thread.}
+\begin{verbatim}
+    /* User defines a struct th_info containing all the thread-private  */
+    /* data he wishes to associate with threads.  He also defines       */
+    /* a global variable 'current_thread_info' which will always hold   */
+    /* the th_info of the currently-executing thread.                   */
+    struct th_info { ... } *current_thread_info;
 
-\mycomment{
-% Sanjay wanted this out
-\section{Elementary Queues}
-This section describes an elementary queue of threads that can be used
-to manage lists of threads.
+    /* User creates a thread 't', and allocates a block of memory       */
+    /* 'tinfo' to hold the thread's private data.  User tells the       */
+    /* system that whenever thread 't' is running, the global variable  */
+    /* 'current_thread_info' should be set to 'tinfo'.  Thus, thread    */
+    /* 't' can access its private data just by dereferencing            */
+    /* 'current_thread_info'.                                           */
+    t = CthCreate( ... );
+    tinfo = (struct th_info *)malloc(sizeof(struct th_info));
+    CthSetVar(t, &current_thread_info, tinfo);
+\end{verbatim}
 
-\function{QUEUE *CthNewQueue()}
-\desc{This call returns a new empty queue of threads.}
+\function{void *CthGetVar(CthThread t, void **var)}
+\desc{This makes it possible to retrieve values previously stored with
+{\tt CthSetVar} when {\tt t} is {\it not} executing.  Returns the value
+that {\tt var} will be set to when {\tt t} is running.}
 
-\function{int CthQueueInit(QUEUE *queue)}
-\desc{This call initializes a queue that has been allocated earlier.}
-
-\function{int CthQueueEmpty(QUEUE *queue)}
-\desc{This call returns 1 if the queue \param{queue} is empty and 0 if not.}
-
-\function{int CthQAddThread(QUEUE *queue, THREAD *thr)}
-\desc{This call adds the thread \param{thr} to the queue \param{queue}.}
-
-\function{THREAD *CthQPop(QUEUE *queue)}
-\desc{This call pops a thread from the front of the queue and returns NULL if 
-the queue is empty.}
-}
-
-\section{Synchronization Mechanisms}
-To use the following calls, include the file ``sync.h''
-
-\subsection{Locks}
-
-Locks (or mutexes) are synchronization mechanisms that can be used by user 
-programs to provide mutual exclusion to critical sections. Threads that attempt
-to ``lock'' such a variable are suspended if the lock is already taken and are
-awakened when the lock becomes available to them.
-
-\function{LOCK *CtsNewLock(void)}
-\desc{This call can be used to create a new lock variable.}
-
-\function{CtsLockInit(LOCK *lock)}
-\desc{This call can be used to initialize a lock \param{lock} that was 
-earlier allocated.}
-
-\function{int CtsTryLock(LOCK *lock)}
-\desc{This call is a nonblocking attempt to lock \param{lock}. It returns 
-1 immediately if \param{lock} is available after making the current thread 
-\param{lock}'s owner and returns 0 if \param{lock} is already locked.}
-
-\function{int CtsLock(LOCK *lock)}
-\desc{This call is used by a thread to wait until it obtains the ownership of 
-\param{lock}. Several threads making this call may be queued up at the lock,
-which is then ``given'' to each in turn.}
-
-\function{int CtsUnLock(LOCK *lock)}
-\desc{This call is used by a thread to relinquish the control of \param{lock}.
-An error value is returned if the thread attempts the unlock is not 
-\param{lock}'s owner.}
-
-\subsection{Condition Variables}
-
-Condition variables are synchronization mechanisms that are used to implement 
-trigger like functionality. Threads can wait on a condition variable. Other
-threads can either signal or broadcast this condition variable causing the 
-awakening of either one or all of the threads waiting on this variable.
-
-\function{CONDN *CtsNewCondn(void)}
-\desc{This call returns a new initialized condition variable.}
-
-\function{int CtsCondnInit(CONDN *condn)}
-\desc{This call can be used to initialize a condition variable that was earlier
-allocated. This call causes all the waiting threads on this condition variable 
-to be awakened.}
-
-\function{int CtsCondnWait(CONDN *condn)}
-\desc{This call is used by thread that want to wait on the condition 
-variable \param{condn}.}
-
-\function{int CtsCondnSignal(CONDN *condn)}
-\desc{This call releases one of the threads waiting on the condition 
-variable \param{condn}.}
-
-\function{int CtsCondnBroadcast(CONDN *condn)}
-\desc{This call releases all the threads waiting on the condition variable
-\param{condn}.}
-
-\subsection{Barriers}
-Barriers are a specialization of condition variables. A barrier is 
-a condition variable whose {\em k}th wait is a broadcast for some initial k.
-That is, the barrier waits for k threads to reach a particular point before it
-lets them all go.
-
-\function{BARRIER *CtsNewBarrier(void)}
-\desc{can be used to create a new barrier.}
-
-\function{int CtsBarrierReinit(BARRIER *bar, int num)}
-\desc{This call (re)initializes the barrier \param{bar} to free any 
-threads waiting on it and then to await the arrival of {\tt num} threads.}
-
-\function{int CtsAtBarrier(BARRIER *bar)}
-\desc{Following the initialization of the barrier, the {\tt num} participating 
-threads need to make this call before they can proceed beyond this point in 
-the program. This call hence blocks all but the last thread to make this call, 
-and awakens them all upon the arrival of this thread at the barrier.}
+\function{void CthSetStrategyDefault(CthThread t)}
+\desc{This the simple scheduler provided to converse users as a
+convenience.  Calling this function on a thread {\tt t} causes thread
+{\tt t} to be scheduled by the built-in converse scheduler {\tt
+CsdScheduler}.  Awakening thread {\tt t} will cause it to be inserted
+into the {\tt CsdScheduler} queue, and it will then be resumed when it
+gets to the head of the queue.  If it then suspends, it will return
+control to the thread running the {\tt CsdScheduler}.}
 
