--- a/doc/converse/cmi.tex
+++ b/doc/converse/cmi.tex
@@ -3,63 +3,65 @@
 \internal{
 \section{Initialization and Wrap-Up}
 
-\function{void CmiInit(int argc, char *argv[])}
+\function{void ConverseInit(char *argv[])}
 \desc{This function initializes the machine interface. It should be
-called prior to any other CMI functions. 
+called prior to any other Converse functions. 
 Multiple calls to this function in a process should
-be avoided. \param{argc} and \param{argv} are in similar format as passed to
+be avoided. \param{argv} is in similar format as passed to
 \param{main(argc, argv)}. 
-They would be utilized by \param{CmiInit()} to initialize
+They would be utilized by \param{ConverseInit()} to initialize
 machine specific parameters such as number of processors.}
 
-\function{void CmiExit(void)}
-\desc{This function frees the resources acquired by CMI and wraps up CMI. 
-Any other CMI function should not be called after a call to this function.
+\function{void ConverseExit(void)}
+\desc{This function frees the resources acquired by Converse and wraps up. 
+Any other Converse function should not be called after a call to this function.
 \note{It does not terminate the calling
-process. A separate call to \param{exit()} is needed after \param{CmiExit()} to
-achieve this.}}
+process. A separate call to \param{exit()} is needed after 
+\param{ConverseExit()} to achieve this.}}
 }
 
 
 \section{Message Handler Calls}
 
 
-\function {int CmiMsgHeaderSizeBytes(void)}
-\desc{This call returns the size of the message header in bytes.}
+\function {CmiMsgHeaderSizeBytes}
+\desc{This constant, defined in {\tt converse.h}, denotes
+the size of the message header in bytes.}
  
 \function {void CmiSetHandler(int *MessageBuffer, int HandlerId)}
-\desc{This call sets the handler field of a message to {\tt HandlerId}.}
+\desc{This macro sets the handler field of a message to \param{HandlerId}.}
+ 
+\function {int CmiGetHandler(int *MessageBuffer)}
+\desc{This call returns the handler field of a message \param{MessageBuffer}.}
  
 \function {HANDLER CmiGetHandlerFunction(int *MessageBuffer)}
-\desc{This call returns the handler function pointer for a message. This
+\desc{This call returns the handler function pointer for a message 
+\param{MessageBuffer}. This
 usually involves looking up a table using the handler-id stored in
 the message header at the sending processor. HANDLER is defined as 
 {\tt typedef void (*HANDLER)(void *)} .}
 
- 
 \function {int CmiRegisterHandler(HANDLER HandlerFunction)}
 \desc{This call registers a message handler with the CMI and returns a
 handler index which can be subsequently used to specify the handler
-for a message.}
+for a message. \note{This function should be called
+in the same order for all handlers in all the processes belonging to an 
+application so that the handler-ids remain consistent across processes.
+For this purpose, it is useful to register all handlers at the initialization
+stage of an application.}}
 
-
-\section{Timer Calls}
-
-\function{double CmiTimer(void)}
-\desc{Returns current value of the timer in seconds. This is
-typically the time spent since the \param{CmiInit()} call.
-The precision of this timer is the best available on the particular machine,
-and usually has at least microsecond accuracy.}
 
 \section{Point-To-Point Communication}
 
+\internal{
 \function{void *CmiGetSpecificMsg(int HandlerId)}
 \desc{This call waits until a message for the specified handler is
 available, and returns a pointer to the message buffer. Ownership of
 the message buffer is maintained with the CMI (e.g. another call to
-\param{CmiGetMsg()} or \param{CmiSpecificMsg()} can overwrite the
+scheduler or \param{CmiSpecificMsg()} can overwrite the
 contents of this buffer.).  The message handler should explicitly call
 \param{CmiGrabBuffer()} to acquire ownership of the message buffer.}
+}
 
 \internal{
 \function{void *CmiGetMsg(void)}
@@ -73,38 +75,30 @@ explicitly call \param{CmiGrabBuffer()} to acquire ownership
 the message buffer.} 
 }
 
-\internal{
-\function{void CmiDeliverMsgs(void)}
-\desc{ Retrieves messages from the network message queue and invokes 
-corresponding handler functions for arrived messages. This function 
-returns after the network message queue becomes empty. Even after
-calling the handler functions, ownership of the message is kept with
-CMI and the handler function should call \param{CmiGrabBuffer()} to
-acquire the message buffer.}
-}
-
-\function{CommHandle CmiAsyncSend(unsigned int destPE, unsigned int size, void *msg)}
-\desc{ Initiates an asynchronous send of \param{msg} of length
-\param{size} bytes to processor \param{destPE} and returns a
-communication handle which could be used to enquire the status of this
-communication. Message buffer for \param{mesg} should not be reused or freed
-until communication is complete.}
 
 \function{void CmiSyncSend(unsigned int destPE, unsigned int size, void *msg)}
 \desc{ Sends \param{msg} of size \param{size} bytes to processor
 \param{destPE}. Message buffer for \param{msg} could be reused after
 the call returns.}
 
-\function{int CmiAsyncMsgSent(CommHandle handle)}
+\function{CmiCommHandle CmiAsyncSend(unsigned int destPE, unsigned int size, void *msg)}
+\desc{ Initiates an asynchronous send of \param{msg} of length
+\param{size} bytes to processor \param{destPE} and returns a
+communication handle which could be used to enquire the status of this
+communication. Message buffer for \param{mesg} should not be reused or freed
+until communication is complete.}
+
+\function{int CmiAsyncMsgSent(CmiCommHandle handle)}
 \desc{Returns the status of asynchronous send specified by
 communication handle \param{handle}.}
 
-\function{void CmiReleaseCommHandle(CommHandle handle)}
+\function{void CmiReleaseCommHandle(CmiCommHandle handle)}
 \desc{ Releases the communication handle \param{handle} and
 associated resources. It does not free the message buffer.
 \param{handle} could be reused by CMI for another communication after
 this call succeeds.}
 
+\internal{
 \function{CommHandle CmiVectorSend(int destPE, int HandlerId, int len, int sizes[], void *DataArray[])}
 \desc{Initiates an asynchronous send of data to processor
 \param{destPE}.  The data consists of \param{len} pieces residing in
@@ -118,6 +112,7 @@ about the status of communication using \param{CmiAsyncMsgSent()}.
 Individual pieces of data as well as the arrays \param{sizes} and
 \param{DataArray} should not be overwritten or freed before the
 communication is complete.}
+}
 
 \function{void CmiGrabBuffer(void **pbuf)}
 \desc{ Transfers the ownership of the buffer pointed to by
@@ -125,6 +120,24 @@ communication is complete.}
 system buffer, CMI copies the buffer contents to newly allocated user
 space and updates \param{*pbuf} to point to the new buffer.}
 
+\function{int CmiDeliverMsgs(int MaxMsgs)}
+\desc{ Retrieves messages from the network message queue and invokes 
+corresponding handler functions for arrived messages. This function 
+returns after either the network message queue becomes empty or after
+\param{MaxMsgs} messages have been retrieved and their handlers called. 
+It returns the difference between total messages delivered and \param{MaxMsgs}.
+Even after
+calling the handler functions, ownership of the message is kept with
+CMI and the handler function should call \param{CmiGrabBuffer()} to
+acquire the message buffer.}
+
+\function{void CmiDeliverSpecificMsg(int HandlerId)}
+\desc{ Retrieves messages from the network queue and delivers the first message
+with its handler field equal to \param{HandlerId}. This functions queues
+the remaining messages retrieved from the network. It returns after the 
+invoked handler function returns.}
+
+\internal{
 \section{Global Pointer}
 
 \function{int CmiGptrCreate(GlobalPtr *gptr, void *lptr, unsigned int size)}
@@ -159,8 +172,9 @@ to  enquire about the status of this operation.}
 memory pointed to by \param{lptr} to the memory pointed to by global
 pointer \param{gptr}.  This function returns a  communication handle
 which could be used to  enquire about the status of this operation.}
+}
 
-\section{Group Communication}
+\section{Broadcast}
 
 \function{void CmiSyncBroadcast(unsigned int size, void *msg)}
 \desc{Sends \param{msg} of length \param{size} bytes to all processors
@@ -192,6 +206,14 @@ which the caller resides. It returns a communication handle which
 could be used to check the status of this send using
 \param{CmiAsyncMsgSent()}. \param{msg} should not be overwritten or
 freed before the communication is complete.}
+
+\section{Timer Calls}
+
+\function{double CmiTimer(void)}
+\desc{Returns current value of the timer in seconds. This is
+typically the time spent since the \param{ConverseInit()} call.
+The precision of this timer is the best available on the particular machine,
+and usually has at least microsecond accuracy.}
 
 \section{Processor Ids}
 
