Removed the Load Balancing calls chapter from the manual. Removed the synchronization mechanisms from the manual.

--- a/doc/converse/manual.tex
+++ b/doc/converse/manual.tex
@@ -53,8 +53,8 @@
 \input{cmi}
 \input{msgmgr}
 \input{threads}
-\input{thsync}
+%\input{thsync}
 \input{cpvmacros}
-\input{ldb}
+%\input{ldb}
 
 \end{document}
