Formatted to fit onto a line.

--- a/doc/converse/scheduler.tex
+++ b/doc/converse/scheduler.tex
@@ -50,7 +50,7 @@ and the nature of priority information used (none, integer or bit-vector).
 These predefined constants are: 
 {\tt CQS\_QUEUEING\_FIFO}, {\tt CQS\_QUEUEING\_LIFO},
 {\tt CQS\_QUEUEING\_IFIFO}, {\tt CQS\_QUEUEING\_ILIFO},
-{\tt CQS\_QUEUEING\_BFIFO}, {\tt CQS\_QUEUEING\_BLIFO}.
+{\tt CQS\_QUEUEING\_BFIFO}, and\\  {\tt CQS\_QUEUEING\_BLIFO}.
 This call is usually made from
 a message handler when the message is not to be processed immediately,
 but may be processed later (e.g. depending on the message's priority).
