fixed libck-unimain.o (was mispelled)

--- a/doc/converse/simulator.tex
+++ b/doc/converse/simulator.tex
@@ -11,7 +11,7 @@ for performance measurements has not been tested yet.
 
 In order to run Converse programs with the simulator:
 \begin{item}
-\item link user program with <machine>/lib/cklin-main.o
+\item link user program with <machine>/lib/libck-unimain.o
 \item prepare a configuration file as described below
 \item to run, type pgm +pN (and possibly other runtime options) where
    N is the number of processors.
