*** empty log message ***

--- a/doc/install/manual.tex
+++ b/doc/install/manual.tex
@@ -12,8 +12,48 @@
 % REVISION HISTORY:
 %
 % $Log$
-% Revision 1.1  1995-10-31 22:27:53  milind
+% Revision 1.2  1995-11-01 20:02:08  milind
+% *** empty log message ***
+%
+% Revision 1.1  1995/10/31  22:27:53  milind
 % Initial revision
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\documentstyle[11pt,fullpage]{article}
+\pagestyle{headings}
+\setlength{\textwidth}{6.5in}
+\setlength{\textheight}{9in}
+\setlength{\parindent}{0in}
+\setlength{\topmargin}{-.5in}
+\parskip 0.1in
+\newcommand{\zap}[1]{ }
+\newcommand{\fcmd}{\bf}                 %%% Font for Charm commands
+\newcommand{\fparm}{\bf\sf}             %%% Font for parameters to Charm commands
+\newcommand{\fexec}{\bf}                %%% Font for compile/execute cmds/options
+
+\begin{document}
+ 
+\begin{titlepage}
+\vspace*{2in}
+\Huge
+\begin{center}
+Charm/Charm++/Converse \\
+Installation\\
+Manual\\
+\vspace*{0.7in}
+\today
+\end{center}
+\normalsize
+\end{titlepage}
+
+In this manual, we describe how to install Charm, Charm++ and
+Converse, how to compile and execute programs, and the available
+command line options.  We also describe queueing and load balancing
+strategies, and the various modes of execution of Charm and Charm++ programs.
+
+\include{install}
+\include{compile}
+\include{run}
+
+\end{document}
